--- a/burger-builder/package.json
+++ b/burger-builder/package.json
@@ -129,5 +129,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   }
 }
